--- a/WorkplaceAnalytics/toc.yml
+++ b/WorkplaceAnalytics/toc.yml
@@ -1,8 +1,8 @@
 - name: Workplace Analytics 
-  href: index.md
+  href: ./conceptual/index.md
   items: 
     - name: Workplace Analytics Overview 
-      href: index.md
+      href: ./conceptual/index.md
       items: 
         - name: Environment Requirements
           href: ./conceptual/index.md
@@ -13,7 +13,7 @@
         - name: Getting Support
           href: ./conceptual/index.md
     - name: Use/ Analyze  
-      href: index.md
+      href: ./conceptual/index.md
       items: 
       - name: Explore Metrics
         href: ./conceptual/index.md
@@ -46,7 +46,7 @@
       - name: Solutions 
         href: ./conceptual/index.md
     - name: Getting Started  
-      href: index.md
+      href: ./conceptual/index.md
       items:
       - name: Checklist
         href: ./conceptual/index.md
@@ -62,11 +62,11 @@
         href: ./conceptual/index.md
       - name: Step Six - Begin to Analyze Data 
         href: ./conceptual/index.md
-- name: MyAnalytucs
-  href: index.md
+- name: MyAnalytics
+  href: ./conceptual/index.md
   items: 
     - name: MyAnalytics Overview 
-      href: index.md
+      href: ./conceptual/index.md
       items: 
         - name: Environment Requirements
           href: ./conceptual/index.md
@@ -77,18 +77,18 @@
         - name: Getting Support
           href: ./conceptual/index.md
     - name: Use/ Analyze  
-      href: index.md
+      href: ./conceptual/index.md
       items: 
-      - name: Explore Metrics
+      - name: Components
         href: ./conceptual/index.md
         items:
-          - name: Week in the Life
+          - name: Dashboard
             href: ./conceptual/index.md
-          - name: Meeting Overview 
+          - name: Add-in
             href: ./conceptual/index.md
           - name: Management and Coaching 
             href: ./conceptual/index.md
-          - name: Networks and Collaboration 
+          - name: Email Digests
             href: ./conceptual/index.md
       - name: Chart Types
         href: ./conceptual/index.md
@@ -96,33 +96,22 @@
         href: ./conceptual/index.md
       - name: Data Sources
         href: ./conceptual/index.md
-        items:
-        - name: Summary
-          href: ./conceptual/index.md
-        - name: o365 Data Summary
-          href: ./conceptual/index.md
-        - name: Organizational Summary
-          href: ./conceptual/index.md
-        - name: Networks and Collaboration 
-          href: ./conceptual/index.md
-      - name: MyAnalytucs Settings 
-        href: ./conceptual/index.md
-      - name: Solutions 
+      - name: MyAnalytics Settings 
         href: ./conceptual/index.md
     - name: Getting Started  
-      href: index.md
+      href: ./conceptual/index.md
       items:
       - name: Checklist
         href: ./conceptual/index.md
-      - name: Step One - Population Scope and Licence Assignment 
+      - name: Step One - 
         href: ./conceptual/index.md
-      - name: Step Two - Role Assignment 
+      - name: Step Two - 
         href: ./conceptual/index.md
-      - name: Step Three - Configure Settings 
+      - name: Step Three - 
         href: ./conceptual/index.md
-      - name: Step Four - Prepare and upload Organizational Data 
+      - name: Step Four - a 
         href: ./conceptual/index.md
-      - name: Step Five - Configure Meeting Classifier 
+      - name: Step Five - 
         href: ./conceptual/index.md
-      - name: Step Six - Begin to Analyze Data 
+      - name: Step Six - 
         href: ./conceptual/index.md
