--- a/WorkplaceAnalytics/toc.yml
+++ b/WorkplaceAnalytics/toc.yml
@@ -1,35 +1,25 @@
 - name: Workplace Analytics
   href: ./conceptual/index.md
   items:
-    - name: Workplace Analytics Overview
+    - name: Overview
       href: ./conceptual/index.md
       items:
         - name: Environment Requirements
           href: ~/Overview/Environment-Requirements.md
-        - name: Architecture
+        - name: Engagement Quickstart - Stakeholder Map
+          href: ~/Overview/Stakeholder-Map.md
+        - name: Engagement Quickstart - Suggested Checklist
+          href: ~/Overview/Suggested-Checklist.md
+        - name: Strategy Partners
+          href: ~/Overview/Suggested-Checklist.md
+        - name: Components
+          href: ~/Overview/Components.md
+        - name: Architecture and How it Works
           href: ~/Overview/Architecture.md
         - name: Privacy Principles
           href: ~/Overview/Privacy-Principles.md
         - name: Getting Support
           href: ~/Overview/Getting-Support.md
-    - name: Use/ Analyze
-      href: ./conceptual/index.md
-      items:
-      - name: Explore Metrics
-        href: ./conceptual/index.md
-      - name: Chart Types
-        href: ~/Use/Chart-Types.md
-      - name: Create Queries
-        href: ~/Use/Create-Queries.md
-      - name: Data Sources
-        href: ./conceptual/index.md
-        items:
-        - name: Summary
-          href: ~/Use/Data-Sources-Summary.md
-      - name: Workplace Analytics Settings
-        href: ./conceptual/index.md
-      - name: Solutions
-        href: ./conceptual/index.md
     - name: Getting Started
       href: ./conceptual/index.md
       items:
@@ -50,8 +40,33 @@
     - name: Grow
       href: ./conceptual/index.md
       items:
+        - name: Finding a Business Scenario
+          href: ./conceptual/index.md
+        - name: Communicating Analysis to population scope
+          href: ./conceptual/index.md
+        - name: Percentage and Average Calculation
+          href: ./conceptual/index.md
         - name: FT Content would go here
           href: ./conceptual/index.md
+    - name: Use and Analyze
+      href: ./conceptual/index.md
+      items:
+      - name: Explore Metrics
+        href: ./conceptual/index.md
+      - name: Chart Types
+        href: ~/Use/Chart-Types.md
+      - name: Create Queries
+        href: ~/Use/Create-Queries.md
+      - name: Data Sources
+        href: ./conceptual/index.md
+        items:
+        - name: Summary
+          href: ~/Use/Data-Sources-Summary.md
+      - name: Workplace Analytics Settings
+        href: ./conceptual/index.md
+      - name: Solutions
+        href: ./conceptual/index.md
+
 - name: MyAnalytics
   href: ./conceptual/index.md
   items:
