--- a/WorkplaceAnalytics/toc.yml
+++ b/WorkplaceAnalytics/toc.yml
@@ -97,7 +97,7 @@
       - name: Dashboard
         href: ./conceptual/index.md
       - name: Add-in
-        href: ./conceptual/index.md
+        href: ~/MyAnalytics/Use/add-in.md
       - name: Management and Coaching
         href: ./conceptual/index.md
       - name: Email Digests
