--- a/WorkplaceAnalytics/toc.yml
+++ b/WorkplaceAnalytics/toc.yml
@@ -67,13 +67,13 @@
 - name: MyAnalytics
   expanded: true
   items:
-    - name: MyAnalytics Overview
+    - name: Overview
       items:
         - name: Environment Requirements
           href: MyAnalytics/Overview/Environment-Requirements.md
    #     - name: Architecture
    #       href: ./conceptual/index.md
-        - name: Privacy Principles
+        - name: Privacy Guide
           href: MyAnalytics/Overview/Privacy-Guide.md
    #     - name: Getting Support
    #       href: ./conceptual/index.md
