--- a/WorkplaceAnalytics/toc.yml
+++ b/WorkplaceAnalytics/toc.yml
@@ -32,20 +32,6 @@
         href: ~/Setup/Set-up-Workplace-Analytics.md#step-seven-set-up-meeting-exclusions
     - name: Use
       items:
-      - name: Metrics Definition
-        href: ~/Use/Metrics-Definition.md
-      - name: Metrics Glossary
-        href: ~/Use/Glossary.md
-      - name: Explore Metrics - Management and Coaching
-        href: ~/Use/Explore-Metrics-management-and-coaching.md
-      - name: Explore Metrics - Meetings overview
-        href: ~/Use/Explore-Metrics-meetings-overview.md
-      - name: Explore Metrics - Week in the life
-        href: ~/Use/Explore-Metrics-week-in-the-life.md
-      - name: Chart Types
-        href: ~/Use/Chart-Types.md
-      - name: Create Queries
-        href: ~/Use/Create-Queries.md
       - name: Administration
         items:
           - name: Workplace Analytics Settings
@@ -60,12 +46,30 @@
             href: ~/Use/Group-Based-Licencing.md
           - name: Timezones for Workplace analytics
             href: ~/Use/Timezones-for-Workplace-analytics.md
-      - name: Understand meeting exclusions
-        href: ~/Use/Understand-meeting-exclusions.md
-      - name: Create Custom Meeting Exclusion Rules
-        href: ~/Use/Create-custom-meeting-exclusions-rules.md
-      - name: Percentage and average calculations
-        href: ~/Use/Percentage-and-average-calculations.md
+      - name: Features
+        items:
+          - name: Explore Metrics - Management and Coaching
+            href: ~/Use/Explore-Metrics-management-and-coaching.md
+          - name: Explore Metrics - Meetings overview
+            href: ~/Use/Explore-Metrics-meetings-overview.md
+          - name: Explore Metrics - Week in the life
+            href: ~/Use/Explore-Metrics-week-in-the-life.md
+          - name: Chart Types
+            href: ~/Use/Chart-Types.md
+          - name: Create Queries
+            href: ~/Use/Create-Queries.md
+          - name: Understand meeting exclusions
+            href: ~/Use/Understand-meeting-exclusions.md
+          - name: Create Custom Meeting Exclusion Rules
+            href: ~/Use/Create-custom-meeting-exclusions-rules.md
+      - name: Metrics
+        items:
+          - name: Metrics Definition
+            href: ~/Use/Metrics-Definition.md
+          - name: Metrics Glossary
+            href: ~/Use/Glossary.md
+          - name: Percentage and average calculations
+            href: ~/Use/Percentage-and-average-calculations.md
 - name: MyAnalytics
   expanded: true
   items:
