--- a/WorkplaceAnalytics/toc.yml
+++ b/WorkplaceAnalytics/toc.yml
@@ -56,6 +56,8 @@
             href: ~/Use/Explore-Metrics-meetings-overview.md
           - name: Explore Metrics - Week in the life
             href: ~/Use/Explore-Metrics-week-in-the-life.md
+          - name: Explore Metrics - Networks and Collaboration
+            href: ~/Use/Explore-Metrics-Networks-and-Collaboration.md
           - name: Chart Types
             href: ~/Use/Chart-Types.md
           - name: Create Queries
