--- a/WorkplaceAnalytics/toc.yml
+++ b/WorkplaceAnalytics/toc.yml
@@ -34,43 +34,43 @@
       items:
       - name: Administration
         items:
-          - name: Workplace Analytics Settings
+          - name: Workplace Analytics settings
             href: ~/Use/Settings.md
           - name: Prepare and upload organizational data
             href: ~/Use/Prepare-and-upload-organizational-data.md
-          - name: Data Sources
+          - name: Data sources
             href: ~/Use/Data-Sources.md
-          - name: User Roles
+          - name: User roles
             href: ~/Use/User-Roles.md
-          - name: Group based Licence Assignment
+          - name: Group-based license assignment
             href: ~/Use/Group-Based-Licencing.md
-          - name: Role Assignment Using Powershell
+          - name: Role assignment using Powershell
             href: ~/use/using-powershell-to-assign-roles.md
-          - name: Timezones for Workplace analytics
+          - name: Timezones for Workplace Analytics
             href: ~/Use/Timezones-for-Workplace-analytics.md
       - name: Features
         items:
-          - name: Explore Metrics - Management and Coaching
+          - name: Explore metrics - Management and coaching
             href: ~/Use/Explore-Metrics-management-and-coaching.md
-          - name: Explore Metrics - Meetings overview
+          - name: Explore metrics - Meetings overview
             href: ~/Use/Explore-Metrics-meetings-overview.md
-          - name: Explore Metrics - Week in the life
+          - name: Explore metrics - Week in the life
             href: ~/Use/Explore-Metrics-week-in-the-life.md
-          - name: Explore Metrics - Networks and Collaboration
+          - name: Explore metrics - Networks and collaboration
             href: ~/Use/Explore-Metrics-Networks-and-Collaboration.md
-          - name: Chart Types
+          - name: Chart types
             href: ~/Use/Chart-Types.md
-          - name: Create Queries
+          - name: Create queries
             href: ~/Use/Create-Queries.md
           - name: Understand meeting exclusions
             href: ~/Use/Understand-meeting-exclusions.md
-          - name: Create Custom Meeting Exclusion Rules
+          - name: Create custom meeting exclusion rules
             href: ~/Use/Create-custom-meeting-exclusions-rules.md
       - name: Metrics
         items:
-          - name: Metric Definition
+          - name: Metric definition
             href: ~/Use/metric-definitions.md
-          - name: Metrics Glossary
+          - name: Metrics glossary
             href: ~/Use/Glossary.md
           - name: Percentage and average calculations
             href: ~/Use/Percentage-and-average-calculations.md
@@ -87,8 +87,10 @@
           href: MyAnalytics/Overview/Privacy-Guide.md
    #     - name: Getting Support
    #       href: ./conceptual/index.md
-    - name: Administrator's Setup
+    - name: Setup
       items:
+      - name: Checklist
+        href: MyAnalytics/Setup/Mya_setup_checklist.md
       - name: Step One - Review the MyAnalytics privacy guide
         href: MyAnalytics/Overview/Privacy-Guide.md
       - name: Step Two - Configure user settings
