--- a/WorkplaceAnalytics/toc.yml
+++ b/WorkplaceAnalytics/toc.yml
@@ -42,7 +42,7 @@
             href: ~/Use/Data-Sources.md
           - name: User roles
             href: ~/Use/User-Roles.md
-          - name: Group-based license assignment
+          - name: Assign group-based licenses
             href: ~/Use/Group-Based-Licencing.md
           - name: Role assignment using Powershell
             href: ~/use/using-powershell-to-assign-roles.md
