final fixes to get support topic

--- a/WorkplaceAnalytics/toc.yml
+++ b/WorkplaceAnalytics/toc.yml
@@ -10,7 +10,7 @@
        #   href: ~/Overview/Architecture.md
         - name: Privacy and Data Access
           href: ~/Overview/Privacy-and-Data-Access.md
-        - name: Getting Support
+        - name: Get Support
           href: ~/Overview/Getting-Support.md
     - name: Setup
       items:
