fixing link bug to item 3 in set up wpa and toc.yml

--- a/WorkplaceAnalytics/toc.yml
+++ b/WorkplaceAnalytics/toc.yml
@@ -16,19 +16,19 @@
       items:
       - name: Checklist
         href: ~/Setup/Set-up-Workplace-Analytics.md
-      - name: Step One - Determine key personas and roles for implementation
+      - name: Step one - Determine key personas and roles for implementation
         href: ~/Setup/Set-up-Workplace-Analytics.md#step-one-determine-key-personas-and-roles-for-implementation
-      - name: Step Two - Assign licenses to population in scope for analysis
+      - name: Step two - Assign licenses to population in scope for analysis
         href: ~/Setup/Set-up-Workplace-Analytics.md#step-two-assign-licenses-to-population-in-scope-for-analysis
-      - name: Step Three - Assign roles to WpA Admin and Analysts
-        href: ~/Setup/Set-up-Workplace-Analytics.md#step-three-assign-roles-to-wpa-admin-and-analysts
-      - name: Step Four - Configure Workplace Analytics Settings
+      - name: Step three - Assign roles to Workplace Analytics admin and analysts
+        href: ~/Setup/Set-up-Workplace-Analytics.md#step-three-assign-roles-to-workplace-analytics-admins-and-analysts
+      - name: Step four - Configure Workplace Analytics Settings
         href: ~/Setup/Set-up-Workplace-Analytics.md#step-four-configure-workplace-analytics-settings
-      - name: Step Five - Prepare and upload organizational data
+      - name: Step five - Prepare and upload organizational data
         href: ~/setup/set-up-workplace-analytics.md#step-five-prepare-and-upload-organizational-data
-      - name: Step Six - Validate and verify data
+      - name: Step six - Validate and verify data
         href: ~/Setup/Set-up-Workplace-Analytics.md#step-six-validate-and-verify-data
-      - name: Step Seven - Configure Meeting Classifier
+      - name: Step seven - Set up meeting exclusions
         href: ~/Setup/Set-up-Workplace-Analytics.md#step-seven-set-up-meeting-exclusions
     - name: Use
       items:
