testing TOC changes

--- a/WorkplaceAnalytics/toc.yml
+++ b/WorkplaceAnalytics/toc.yml
@@ -62,7 +62,7 @@
             href: ~/Use/Explore-Metrics-Networks-and-Collaboration.md
           - name: Chart types
             href: ~/Use/Chart-Types.md
-          - name: Create queries
+          - name: Create queries test
             href: ~/Use/Create-Queries.md
             name: View, download, and export query results
             href: ~/Use/View-download-and-export-query-results.md
