--- a/WorkplaceAnalytics/toc.yml
+++ b/WorkplaceAnalytics/toc.yml
@@ -81,11 +81,13 @@
       - name: Tutorials
         items:
           - name: Person queries
-            href:
+            href: ~/Tutorials/Person-queries.md
           - name: Meeting queries
-            href:
+            href: ~/Tutorials/Meeting-queries.md
           - name: Group queries
-            href:
+            href: ~/Tutorials/Group-queries.md
+          - name: Query basics
+            href: ~/Tutorials/Query-basics.md  
 - name: MyAnalytics
   href: MyAnalytics/MyA-landing-page.md
   expanded: true
