--- a/WorkplaceAnalytics/toc.yml
+++ b/WorkplaceAnalytics/toc.yml
@@ -158,4 +158,6 @@
           - name: Measure
             href: MyAnalytics/Use/MyA-Adoption/Team-adopt-measure.md
           - name: Reinforce
-            href: MyAnalytics/Use/MyA-Adoption/Team-adopt-reinforce.md                        
+            href: MyAnalytics/Use/MyA-Adoption/Team-adopt-reinforce.md
+          - name: Resources
+            href: MyAnalytics/Use/MyA-Adoption/Indiv-adopt-resources.md                                 
